--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,6 +1,6 @@
 body {
   background-color: #efefef;
-  background-image: url('./logo.png');
+  background-image: url('../img/logo.png');
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
